moved to retrotranslator
svn path=/trunk/openspaces/; revision=12998


Former-commit-id: eed125f6bfd728d505f654bd098f8da9c3070971